Version 8.0
===========

New Features and Enhancements
----------------------------- 
* Added CArchive.
  CArchive provides a convenient means of saving and restoring an application's
  data, by streaming the data to and from a file.
  
* Added CRegKey.
  CRegKey is a wrapper for functions used to access and modify the registry.  

* Added CTime and CTimeSpan
  CTime manages the display of date and time.
  CTimeSpan calculates the interval between times and dates.

* Added  GetCommandLineArgs
  This function provides access to the command line arguments. They are
  returned in a vector of CString.

* Added VERIFY macro
  In debug mode, VERIFY asserts if the expression evaluates to zero
  In release mode, VERIFY evaluates the expression, but doesn't assert
  
* Renamed Header files
  The header files located in the include directory have been prefixed 
  with wxx_ . This was done to avoid potential name conflicts with header
  files from other libraries.  



Changes in detail
-----------------
Added CArchive
Added CRegKey
Added CTime
Added CTimeSpan
Added CFrame::SaveRegistryMRUSettings
Added CWinException::GetText
Added ::GetCommandLineArgs

Added VERIFY macro

Added INIFrame demo

Renamed the header files. They are prefixed with wxx_


Version 7.9
===========

Overview
--------
This version of Win32++ moves away from the use of pointers. Where before we 
would use pointers to objects in Win32++ function calls, we now use the objects
directly. The USE_OBSOLETE_CODE macro has been provided in this version to make
code migration easier. Even with this macro defined, you will need to use 
non-pointer arguments in Win32++ function calls.

New Features and Enhancements
-----------------------------
* The FromHandle method of creating temporary CWnds has been obsoleted. 
The FromHandle approach had the following disadvantages:
 - It required the newly created CWnds to be removed some indeterminate time
   after being created. This was done in OnIdle.