@@ -81,12 +81,11 @@
 //						reference can be used to modify the string directly.
 
 
+#include "wxx_wincore.h"
 
 #ifndef _WIN32XX_CSTRING_H_
 #define _WIN32XX_CSTRING_H_
 
-
-#include "wxx_wincore.h"
 
 
 namespace Win32xx
